# code_on_the_phone

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  QUICK-START.md  README.md  cloud-terminal-setup.sh  fix-heavy-output-scrolling.sh  fix-keyboard-input.sh  fix-mobile-scrolling.sh  fix-terminal.sh  install.sh  manage-kitty-config.sh  mobile-terminal-optimized.service  mobile-terminal.html  quick-setup.sh  test-keyboard-debug.html  test-terminals.sh  vercel-terminal-setup.sh
c-port/: ARCHITECTURE.md  Makefile  PROGRESS.md  README.md
docs/: digitalocean-setup.md  quick-vps-alternatives.md  vps-providers.md
flutter-quantum-terminal/: README.md  SETUP.md  build-apk.sh  quantum-field-simulator.html  run.sh  web-client.html
quantum-terminal/: ANIMATIONS.md  APPSTORE_DEPLOY.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  DEPLOY.md  ExportOptions-AppStore.plist  Info.plist  Makefile  README.md  animation_demo.md  animation_visual.txt  cocoa_terminal  deploy_to_appstore.sh  main.m  quantum_app  quantum_app.m  run.sh  run_cocoa.sh  run_simple.sh  simple_terminal  test_animations.sh  test_gl  test_gl.c  test_terminal.sh  test_window  test_window.m
render-app/: .env.example  .eslintrc.js  .gitignore  .prettierignore  DEPLOY.md  README.md  TEST_COVERAGE_REPORT.md  build-three.js  e2e-prod-test.js  generate-icons-canvas.js  generate-icons-png.js  generate-icons.js  generate-password-hash.js  jest.config.js  package-lock.json  package.json  render.yaml  server.js  terminal-pty.js  test-existing-hash.js  test-password.js  test-production-terminal.js  test-terminal-connection.js  test-websocket-proxy.js
rust-web-terminal/: Cargo.toml  DEPLOYMENT.md  LOCAL_TESTING.md  README.md  build.sh  debug-terminal.html  demo-evidence.sh  direct-terminal.html  fixed-terminal.html  index.html  mobile-terminal.html  package.json  playwright.config.ts  proxy-terminal.html  run-tests.sh  serve.py  server.js  simple.html  solution.md  test-locally.sh  ttyd-auth.html  ttyd-client.html  ttyd-correct.html  ttyd-official.html  working-terminal.html  working-ttyd.html
rust-web-terminal/.github/workflows/: ci.yml
rust-web-terminal/evidence/: project-structure.txt
rust-web-terminal/evidence/screenshots/: screenshot-descriptions.txt
rust-web-terminal/evidence/test-results/: coverage.txt  e2e-tests.txt  performance.txt  unit-tests.txt
rust-web-terminal/pkg/: package.json  rust_web_terminal.js
rust-web-terminal/src/: auth.rs  lib.rs  terminal.rs  utils.rs  websocket.rs
rust-web-terminal/tests/: unit_tests.rs
rust-web-terminal/tests/e2e/: terminal.spec.ts
src/: lib.rs  main.rs  web_server.rs
static/: index.html  index.html.bak  manifest.json  mobile.html  (+3 more)
(+106 files in other folders)
