[package]
name = "quantum-terminal"
version = "0.1.0"
edition = "2021"
authors = ["Elite Engineering Team"]
description = "High-performance terminal with O(1) complexity guarantees"
license = "MIT"
rust-version = "1.75"

[profile.release]
# Aggressive optimizations for maximum performance
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
# Core async runtime - minimal overhead
tokio = { version = "1.35", features = ["rt-multi-thread", "net", "sync", "time", "macros", "signal", "fs", "process", "io-util"] }

# Zero-copy byte handling
bytes = "1.5"

# High-performance serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# UUID generation for sessions
uuid = { version = "1.6", features = ["v4", "fast-rng", "serde"] }

# Lock-free data structures
crossbeam = "0.8"

# Memory pool for zero-allocation
slab = "0.4"

# Atomic operations
parking_lot = "0.12"

# Command execution
nix = { version = "0.27", features = ["signal", "process"] }

# Environment loading
dotenv = "0.15"

# Web framework with WebSocket support
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }

# JSON for WebSocket messages
serde_json = "1.0"

[dev-dependencies]
# Benchmarking framework
criterion = { version = "0.5", features = ["html_reports"] }

# Property-based testing
proptest = "1.4"

# Concurrency testing
loom = "0.7"

[lib]
name = "quantum_terminal"
path = "src/lib.rs"

[[bin]]
name = "quantum-terminal"
path = "src/main.rs"

# Benchmarks will be added later
# [[bench]]
# name = "performance"
# harness = false

[workspace]
members = []